<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbarSize="0dp">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:width="@dimen/width_column_table"
                    android:background="@color/blue_light"
                    android:paddingVertical="5dp"
                    android:text="@string/picture"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:width="@dimen/width_column_table"
                    android:background="@color/blue_light"
                    android:paddingVertical="5dp"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:width="@dimen/width_column_table"
                    android:background="@color/blue_light"
                    android:paddingVertical="5dp"
                    android:text="@string/vote_average"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="@dimen/width_column_table"
                    android:background="@color/blue_light"
                    android:paddingVertical="5dp"
                    android:text="@string/description"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="@dimen/width_column_table"
                    android:background="@color/blue_light"
                    android:paddingVertical="5dp"
                    android:text="@string/create_at"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

            </TableRow>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_max"
                android:orientation="vertical"
                android:paddingBottom="100dp" />

        </TableLayout>
    </HorizontalScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>