<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/blue_dark"
    android:padding="@dimen/dimen_max"
    tools:context=".ui.auth.LoginFragment">

    <FrameLayout
        android:id="@+id/space_header"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_default"
        android:text="@string/login"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/textUserName"
        app:layout_constraintTop_toBottomOf="@id/space_header"
        tools:ignore="MissingConstraints" />

    <FrameLayout
        android:id="@+id/space_title_bottom"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_login"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/textUserName"
        app:layout_constraintTop_toBottomOf="@id/space_title_bottom"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_default"
        app:boxBackgroundColor="@color/white"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_email"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:padding="13dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_default"
        android:text="@string/password"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/textUserName"
        app:layout_constraintTop_toBottomOf="@id/textUserName"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/textUserName"
        app:layout_constraintStart_toStartOf="@id/textUserName"
        app:layout_constraintTop_toBottomOf="@id/title_password"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:padding="13dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/space_bottom"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_medium"
        app:layout_constraintEnd_toEndOf="@+id/textUserName"
        app:layout_constraintStart_toStartOf="@id/textUserName"
        app:layout_constraintTop_toBottomOf="@+id/textPassword"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="@dimen/width_btn"
        android:layout_height="wrap_content"
        android:background="@color/blue_light"
        android:text="@string/login"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="@id/textUserName"
        app:layout_constraintStart_toStartOf="@id/textUserName"
        app:layout_constraintTop_toBottomOf="@id/space_bottom"
        tools:ignore="MissingConstraints" />

    <include
        android:id="@+id/indicator"
        layout="@layout/loading_indicator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

